--- a/SchoolManagementSystem.Core/SchoolManagementSystem.Core.csproj
+++ b/SchoolManagementSystem.Core/SchoolManagementSystem.Core.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTOs\Department.cs\**" />
+    <EmbeddedResource Remove="DTOs\Department.cs\**" />
+    <None Remove="DTOs\Department.cs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
   </ItemGroup>
